# uefi-reset

./: Cargo.toml  README.md  deny.toml
.github/workflows/: ci.yml  release.yml
